# flask-app-base

./: .dr_apps_ignore  README.md  template_info.json
.github/: SECURITY.md
src/: .dr_apps_ignore  config.py  flask_app.py  openapi.yaml  pyproject.toml  requirements.txt  start-app.sh
src/templates/: apidocs.html  index.html
