[project]
name = "flask-app-base"
version = "0.1.0"
description = "DataRobot Flask application template"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.3,<3.2.0",
    "pyyaml>=6.0",
    "gunicorn>=25.2.0,<26.0.0",
    "requests>=2.33.0",
    "datarobot>=3.6.0",
    "pydantic-settings>=2.0.0",
]

[tool.uv]
package = false

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]
